--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Writings from "../components/home/writings.astro";
 import Layout from "../layouts/main.astro";
 ---
 
-<Layout title="Kai">
+<Layout title="Rico">
   <div
     class="relative z-20 w-full max-w-4xl mx-auto mt-16 px-7 md:mt-24 lg:mt-32 xl:px-0"
   >
@@ -15,15 +15,12 @@ import Layout from "../layouts/main.astro";
         <h1
           class="mb-5 text-4xl font-bold leading-tight md:text-4xl lg:text-6xl dark:text-white"
         >
-          Hello, I'm Kai.
+          Hello, I'm Rico.
         </h1>
         <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
-          I'm a front-end programmer living in Nanjing. <br
-            class="hidden lg:block"
-          />I focus on Web development. <br class="hidden lg:block" /><span
-            class="hidden lg:block"
-            >The handsome boy on the right is not me.</span
-          >
+          I'm a front-end web developer living in Indonesia.
+          <br class="hidden lg:block"/>
+          NextJS is my go-to framework to build solutions for your needs.
         </p>
         <p class="mb-2 font-semibold text-neutral-800 dark:text-neutral-200">
           I can help you out with:
@@ -31,13 +28,11 @@ import Layout from "../layouts/main.astro";
         <ul
           class="py-2 space-y-[3px] text-sm list-disc list-inside text-neutral-500 dark:text-neutral-400"
         >
-          <li>Vue.js Development</li>
-          <li>React.js Development</li>
-          <li>Node.js Development</li>
-          <li>Website Design</li>
+          <li>ReactJS Development</li>
+          <li>NextJS Development</li>
           <li>and more...</li>
         </ul>
-        <Button text="Follow me on 𝕏" link="https://twitter.com/ccbikai" />
+        <Button text="Follow me on 𝕏" link="https://twitter.com/rico_rpp21" />
       </div>
       <div
         class="relative justify-end hidden w-full mt-10 md:flex md:pl-10 md:w-1/2 md:mt-0 md:translate-y-4 xl:translate-y-0"
